# Reverse

./: .gitignore  CMakeLists.txt  CMakePresets.json  ENTITY_SYSTEM.md  MATERIAL_SYSTEM.md  README.md  Reverse  imgui.ini  main.cpp
include/: ExternalIncludes.h  ProjectIncludes.h
include/project/: Camera.h  Drawable.h  EBO.h  Interface.h  Light.h  Mesh.h  Model.h  Optional.h  Program.h  Shader.h  Texture.h  VAO.h  VBO.h
installed/assimp/lib/pkgconfig/: assimp.pc
resource/data/: cube.json  rectangle.json  triangle.json
resource/models/car/: license.txt  scene.gltf
resource/models/woman/source/: mon_raviel.mtl
shader/: default.frag  default.vert  interface.frag  light.frag  light.vert
src/: BaseEntities.cpp  CMakeLists.txt  Camera.cpp  Camera.h  DataReader.cpp  Drawable.cpp  EBO.cpp  Entity.cpp  Interface.cpp  Light.cpp  Logger.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  Model.cpp  Optional.cpp  Program.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Transform.cpp  Utilities.cpp  VAO.cpp  VAO.h  VBO.cpp  default.frag  default.vert  glad.c  main.cpp  shaderClass.cpp  shaderClass.h
src/header/: BaseEntities.h  Camera.h  Component.h  Config.h  CoreTypes.h  DataReader.h  Drawable.h  EBO.h  Entity.h  Interface.h  Light.h  Logger.h  Material.h  Mesh.h  MeshRenderer.h  Model.h  Program.h  ResourceManager.h  Scene.h  Shader.h  Texture.h  Transform.h  Utilities.h  VAO.h  VBO.h
